src/test/deca/avecObjet/valid/calculAr.ass
; start main program
; Beginning of main instructions:
	TSTO #7	; Main Program
	BOV pile_pleine
	ADDSP #6
; --------------------------------------------------
; Construction des tables des methodes
; --------------------------------------------------
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; --------------------------------------------------
; Code du programme principal
; --------------------------------------------------
	LOAD #3, R3
	STORE R3, 3(GB)
	LOAD #4, R3
	STORE R3, 4(GB)
	LOAD 3(GB), R3
	PUSH R3
	LOAD 4(GB), R3
	POP R2
	ADD R3, R2
	BOV overflow_arith
	LOAD R2, R3
	PUSH R3
	LOAD #2, R3
	POP R2
	MUL R3, R2
	BOV overflow_arith
	LOAD R2, R3
	STORE R3, 5(GB)
	LOAD #0, R3
	STORE R3, 6(GB)
	LOAD 5(GB), R1
	WINT
	LOAD 5(GB), R1
	WINT
	WNL
while_test_0:
	LOAD 6(GB), R1
	LOAD #5, R3
	CMP R3, R1
	SLT R1
	CMP #0, R1
	BEQ while_end_0
	LOAD 6(GB), R1
	WINT
	LOAD 6(GB), R1
	PUSH R1
	LOAD #1, R3
	POP R2
	ADD R3, R2
	BOV overflow_arith
	LOAD R2, R1
	STORE R1, 6(GB)
	BRA while_test_0
while_end_0:
	HALT
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	BEQ Object.equals.true
	LOAD #0, R0
	BRA Object.equals.end
Object.equals.true:
	LOAD #1, R0
Object.equals.end:
	RTS
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
overflow_arith:
	WSTR "Erreur : overflow_arithmetique"
	WNL
	ERROR
; end main program
